--- a/templates/notificationToSupervisor.html
+++ b/templates/notificationToSupervisor.html
@@ -17,7 +17,7 @@
                     <tr>
                         <td
                             style="padding: 20px; background-color: #003366; color: #ffffff; border-top-left-radius: 5px; border-top-right-radius: 5px;">
-                            <h1 style="margin: 0; font-size: 24px; font-weight: normal;">Notificación de QUIERO PENE</h1>
+                            <h1 style="margin: 0; font-size: 24px; font-weight: normal;">Notificación de Incidencias</h1>
                         </td>
                     </tr>
                     <tr>
