--- a/templates/notificationToSupervisor.html
+++ b/templates/notificationToSupervisor.html
@@ -90,7 +90,7 @@
                             <table width="100%" cellpadding="0" cellspacing="0" border="0" style="margin-bottom: 20px;">
                                 <tr>
                                     <td align="center">
-                                        <a href="#"
+                                        <a href="https://incidentstream.cloud/dashboard/incidents"
                                             style="display: inline-block; padding: 12px 24px; background-color: #003366; color: #ffffff; text-decoration: none; border-radius: 4px; font-weight: bold;">Acceder
                                             al Sistema</a>
                                     </td>
